<resources>
    <string name="app_name">CM-RomHelper</string>

    <!-- Menu Items -->
    <string name="mi_home">Home</string>
    <string name="mi_lck_screen_wallpaper">Wallpaper</string>
    <string name="mi_led_notifications">LED Notifications</string>


    <!-- Title strings-->
    <string name="ttl_txt_wallpaper">Lockscreen Wallpaper</string>
    <string name="ttl_txt_led_notifications">LED Notifications</string>
    <string name="ttl_txt_confirm_settings_restore">Confirm Restore</string>

    <!--labels -->
    <string name="lbl_txt_app_version">App Version:</string>
    <string name="lbl_txt_root_status">Root Status:</string>

    <!-- Button text -->
    <string name="btn_txt_remove_wallpaper">Remove</string>
    <string name="btn_txt_reset_wallpaper">Reset</string>
    <string name="btn_txt_new_wallpaper">New Image</string>
    <string name="btn_txt_restart_systemui">Restart SystemUI</string>
    <string name="btn_txt_restart_system">Restart Phone</string>
    <string name="btn_txt_restore">Restore</string>
    <string name="btn_txt_backup">Backup</string>
    <string name="btn_alert_confirm">Confirm</string>
    <string name="btn_alert_cancel">Cancel</string>

    <!-- BEGIN  messages -->
    <string name="txt_root_available">Root is available</string>
    <string name="txt_root_not_available">Root is NOT available</string>
    <string name="txt_led_cur_settings_overwrite">Current LED Notifications settings will be overwritten</string>
    <string name="txt_led_settings_backingup">Backing up current settings</string>
    <string name="txt_led_settings_restoring">Restoring settings from backup</string>
    <string name="txt_wallpaper_setting_new">Setting new lockscreen wallpaper</string>
    <string name="txt_wallpaper_removing">Removing lockscreen wallpaper</string>
    <string name="txt_wallpaper_reseting">Reseting lockscreen wallpaper</string>
    <!-- END  messages -->

    <!-- Toast messages -->
    <string name="toast_lock_scrn_wlppr_remove_success">LockScreen wallpaper removed</string>
    <string name="toast_lock_scrn_wlppr_remove_fail">Failed to remove LockScreen wallpaper</string>

    <string name="toast_lock_scrn_wlppr_reset_success">LockScreen wallpaper reset</string>
    <string name="toast_lock_scrn_wlppr_reset_fail">Failed to reset LockScreen wallpaper</string>

    <string name="toast_lock_scrn_wlppr_set_success">LockScreen wallpaper set</string>
    <string name="toast_lock_scrn_wlppr_set_fail">Failed to set LockScreen wallpaper</string>

    <string name="toast_ext_storage_perm_denied">You will not be able to assign new wallpaper</string>
    <string name="toast_mi_needs_root"> needs root access!</string>
    <string name="toast_restarting_system"> Restarting</string>

    <string name="toast_led_settings_backup_success">Backup successful</string>
    <string name="toast_led_settings_backup_fail">Backup failed</string>
    <string name="toast_led_settings_restore_success">Restore successful</string>
    <string name="toast_led_settings_restore_fail">Restore failed</string>
    <string name="toast_led_settings_restore_unavailable">No backup found. Restore unavailable.</string>

</resources>
