<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="15dp"
    tools:context="com.marasm.cm_rom_helper.fragments.WallpaperFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_txt_wallpaper"
        android:id="@+id/wallpaper_ttl_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_remove_wallpaper"
        android:id="@+id/wallpaper_remove_btn"
        android:layout_below="@+id/wallpaper_ttl_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onWallPaperRemoveButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_reset_wallpaper"
        android:id="@+id/wallpaper_reset_btn"
        android:layout_below="@+id/wallpaper_remove_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onWallPaperResetButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_new_wallpaper"
        android:id="@+id/wallpaper_new_btn"
        android:layout_below="@+id/wallpaper_reset_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onWallPaperNewButtonClick"/>

</RelativeLayout>
