<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="15dp"
    tools:context="com.marasm.cm_rom_helper.fragments.LedNotificationsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttl_txt_led_notifications"
        android:id="@+id/led_nofifications_ttl_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_backup"
        android:id="@+id/led_notifications_backup_btn"
        android:layout_below="@+id/led_nofifications_ttl_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_restore"
        android:id="@+id/led_notifications_restore_btn"
        android:layout_below="@+id/led_notifications_backup_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_orange_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_restart_system"
        android:id="@+id/restart_system_btn"
        android:layout_below="@+id/led_notifications_restore_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@android:color/holo_red_dark"/>


</RelativeLayout>
